--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Temperature Converter </title>
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
+    <link rel="icon" href="./R.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
 <body>
 <div class="container">
@@ -21,18 +20,17 @@
             <i class='bx bxs-battery' id='battery-icon'></i>
         </div>
     </div>
-    
 <h2 class="title">Temperature Converter </h2>
-<div class="result">
-    <span class="result-heading">
-        Result 
+<div class="output">
+    <span class="output-heading">
+        Output 
     </span>
     <h2 class="celcius-value" id="celcius">1</h2>
 </div>
 
 <div class="degree-type">
     <div class="degree-field">
-        <label for="" class="degree">Degrees</label>
+        <label for="" class="degree">Temperature°</label>
         <input type="number" name="degree" id="degree">
 
     </div>
@@ -42,7 +40,6 @@
         <option value="fahrenheit" id="fahrenheit">Fahrenheit</option>
         <option value="kelvin" id="kelvin">Kelvin</option>
         <option value="celcius" class="celcius">Celcius</option>
-        
     </select>
 </div>
 
